fix scrollbars

--- a/client/src/components/TaskBar/TaskHolder/TaskHolder.css
+++ b/client/src/components/TaskBar/TaskHolder/TaskHolder.css
@@ -9,7 +9,7 @@
 }
 .scrollbarHolder {
     padding-right: .5rem;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .Task {
     width: 100%;
